test/err/unknown_builtin.expected
ERROR: 3:3: unknown builtin '@foo'
3 |   @foo("test");
  |   ^
